<resources>
    <string name="app_name">Quotation App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_0_5">0.5</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_32">32</string>
    <string name="blower">blower</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_1_5">1.5</string>
    <string name="_2_5">2.5</string>
    <string name="_10">10</string>
    <string name="_12">12</string>
    <string name="_16">16</string>
    <string name="strimmer">strimmer</string>
    <string name="_20">20</string>
    <string name="_24">24</string>
    <string name="_40">40</string>
    <string name="tractor">tractor</string>
    <string name="materials">materials</string>
    <string name="ride_on">ride-on</string>
    <string name="digger">digger</string>
    <string name="mini_digger">mini-digger</string>
    <string name="line_marker">line-marker</string>
    <string name="hedge_cutter">hedge-cutter</string>
    <string name="push_mower">push-mower</string>
    <string name="workers">workers</string>
    <string name="hours">hours</string>
    <string name="machinery">machinery</string>
    <string name="_10percent">10%</string>
    <string name="line_paint">line paint</string>
    <string name="percentage">percentage</string>
    <string name="_15_percent">15%</string>
    <string name="_20_percent">20%</string>
    <string name="_25_percent">25%</string>
    <string name="_30_percent">30%</string>
    <string name="_40_percent">40%</string>
    <string name="new_quotation">new quotation</string>
    <string name="_50">50%</string>
    <string name="_14">14</string>
    <string name="_18">18</string>
    <string name="_25">25</string>
    <string name="frequency">frequency</string>
    <string name="total">total</string>
    <string name="description">description</string>
    <string name="hint_job_title"><i>new job title</i></string>
    <string name="hint_job_description"><i>job description</i></string>
    <string name="quote_no">quote no</string>
    <string name="yours_faithfully">"yours faithfully, \n "
                "\n"
                "\n"
                "Will Jones \n "
                "J H Jones and Sons \n "
                "If tender is accepted please sign below and return one copy \n"
                "\n"
                "signature....................      date...................."</string>

    <string name="quote_footer">"telephone: 01225 703295   email will-anthony@hotmail.com \n "
                "VAT no 137 9615 41"</string>

    <string name="work_address">"  J H Jones and Son's \n "
                        "Park Farm \n "
                        "Bath Road \n "
                        "Atworth \n "
                        "Wiltshire \n "
                        "SN12 8HT"</string>

</resources>
