<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddJobActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/newJobToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#B1D8B7"
        android:title="Notes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalTitle"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingStart="12dp"
        android:paddingEnd="2dp"
        android:text="@string/total"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/totalTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/totalTextView" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#B1D8B7"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/totalTitle"
        tools:text="£1543.09" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/totalTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newJobToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hours_recyclerview"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#2F5233"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/hours_title"
                app:layout_constraintTop_toBottomOf="@+id/worker_recyclerview">

            </androidx.recyclerview.widget.RecyclerView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/machinery_recyclerview"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#B1D8B7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/machinery_title"
                app:layout_constraintTop_toBottomOf="@+id/hours_recyclerview">

            </androidx.recyclerview.widget.RecyclerView>

            <EditText
                android:id="@+id/jobDescriptionText"
                android:layout_width="0dp"
                android:layout_height="292dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="#DCDCDC"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:textAlignment="viewStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/description_title"
                app:layout_constraintTop_toBottomOf="@+id/percentage_recyclerview" />

            <TextView
                android:id="@+id/hours_title"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/hours"
                app:layout_constraintBottom_toBottomOf="@+id/hours_recyclerview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/hours_recyclerview" />

            <TextView
                android:id="@+id/worker_title"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/workers"
                app:layout_constraintBottom_toBottomOf="@+id/worker_recyclerview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/worker_recyclerview" />

            <TextView
                android:id="@+id/frequency_title"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/frequency"
                app:layout_constraintBottom_toBottomOf="@+id/frequency_recyclerview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/frequency_recyclerview" />

            <TextView
                android:id="@+id/materials_title"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/materials"
                app:layout_constraintBottom_toTopOf="@+id/frequency_recyclerview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/machinery_recyclerview" />

            <TextView
                android:id="@+id/description_title"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="2dp"
                android:text="@string/description"
                app:layout_constraintEnd_toStartOf="@+id/jobDescriptionText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/jobDescriptionText" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/frequency_recyclerview"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#94C973"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/frequency_title"
                app:layout_constraintTop_toBottomOf="@+id/materials_recyclerview">

            </androidx.recyclerview.widget.RecyclerView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/percentage_recyclerview"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#2F5233"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/percentage_title"
                app:layout_constraintTop_toBottomOf="@+id/frequency_recyclerview">

            </androidx.recyclerview.widget.RecyclerView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/worker_recyclerview"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"

                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="#94C973"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/worker_title"
                app:layout_constraintTop_toBottomOf="@+id/jobTitle">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/machinery_title"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/machinery"
                app:layout_constraintBottom_toBottomOf="@+id/machinery_recyclerview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/machinery_recyclerview" />

            <TextView
                android:id="@+id/percentage_title"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/percentage"
                app:layout_constraintBottom_toBottomOf="@+id/percentage_recyclerview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frequency_recyclerview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/materials_recyclerview"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#76B947"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/materials_title"
                app:layout_constraintTop_toBottomOf="@+id/machinery_recyclerview">

            </androidx.recyclerview.widget.RecyclerView>

            <EditText
                android:id="@+id/jobTitle"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:hint="job title"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>