<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueDull"
    tools:context=".activities.AddJobActivity">


    <TextView
        android:id="@+id/totalTitle"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingStart="12dp"
        android:paddingEnd="2dp"
        android:text="@string/total"
        android:textAlignment="viewStart"
        android:textColor="@color/linkWater"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/totalTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/totalTextView" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/blueDull"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:textColor="@color/linkWater"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/totalTitle"
        tools:text="£1543.09" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/tick_24dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/jobTitle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/blueDull"
        android:gravity="center_vertical"
        android:hint="@string/hint_job_title"
        android:paddingStart="8dp"
        android:textColor="@color/linkWater"
        android:textColorHint="@color/linkWater"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@color/blueDull"
        app:layout_constraintBottom_toTopOf="@+id/totalTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jobTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hours_recyclerview"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@color/blueDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hours_title">

            </androidx.recyclerview.widget.RecyclerView>

            <EditText
                android:id="@+id/jobDescriptionText"
                android:layout_width="0dp"
                android:layout_height="292dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@color/linkWater"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/hint_job_description"
                android:inputType="textMultiLine"
                android:textAlignment="viewStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/percentage_recyclerview" />

            <TextView
                android:id="@+id/hours_title"
                android:layout_width="0dp"
                android:layout_height="19dp"
                android:background="@color/blueDark"
                android:text="@string/hours"
                android:textAlignment="center"
                android:textColor="@color/linkWater"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/worker_recyclerview" />

            <TextView
                android:id="@+id/worker_title"
                android:layout_width="0dp"
                android:layout_height="19dp"
                android:background="@color/blueDark"
                android:text="@string/workers"
                android:textAlignment="center"
                android:textColor="@color/linkWater"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/frequency_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/blueDark"
                android:text="@string/frequency"
                android:textAlignment="center"
                android:textColor="@color/linkWater"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hours_recyclerview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/frequency_recyclerview"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@color/blueDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frequency_title">

            </androidx.recyclerview.widget.RecyclerView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/percentage_recyclerview"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@color/blueDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/percentage_title">

            </androidx.recyclerview.widget.RecyclerView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/worker_recyclerview"
                android:layout_width="0dp"
                android:layout_height="50dp"

                android:background="@color/blueDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/worker_title">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/percentage_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/blueDark"
                android:text="@string/percentage"
                android:textAlignment="center"
                android:textColor="@color/linkWater"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/extrasRV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="319dp" />

            <Button
                android:id="@+id/addMachineryButton"
                android:layout_width="168dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/machinery_button_style"
                android:text="ADD MACHINERY"
                android:textColor="@color/linkWater"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frequency_recyclerview" />

            <Button
                android:id="@+id/addMaterialsButton"
                android:layout_width="168dp"
                android:layout_height="60dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/machinery_button_style"
                android:text="ADD MATERIALS"
                android:textColor="@color/linkWater"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frequency_recyclerview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/extrasRV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addMachineryButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>